--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   cloud_firestore: ^0.13.5
+  table_calendar: ^2.2.3
 
 dev_dependencies:
   flutter_test:
