--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   cloud_firestore: ^0.13.5
   table_calendar: ^2.2.3
+  progress_dialog: ^1.2.0
 
 dev_dependencies:
   flutter_test:
