--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cloud_firestore: ^0.13.5
   table_calendar: ^2.2.3
   progress_dialog: ^1.2.0
+  charts_flutter: ^0.8.1
 
 dev_dependencies:
   flutter_test:
