--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_auth_web:
   dynamic_theme: ^1.0.1
   flutter_swiper: ^1.1.6
+  flutter_spinkit: ^4.1.2
 
 dev_dependencies:
   flutter_test:
