--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   dynamic_theme: ^1.0.1
   flutter_swiper: ^1.1.6
   flutter_spinkit: ^4.1.2
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
