--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
@@ -39,8 +38,14 @@ dependencies:
   dynamic_theme: ^1.0.1
   flutter_swiper: ^1.1.6
   flutter_spinkit: ^4.1.2
+  flutter_launcher_icons: ^0.7.3
   flutter_localizations:
     sdk: flutter
+
+flutter_icons:
+    android: true
+    ios: true
+    image_path: "assets/ic_launcher.png"
 
 dev_dependencies:
   flutter_test:
